# pyminidsp

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  wheels.yml
docs/: Makefile  changelog.rst  conf.py  gen_audio_samples.py  gen_signal_plots.py  index.rst  installation.rst  make.bat  quickstart.rst
docs/_static/plots/: blackman_window_spectrum.html  blackman_window_time.html  chirp_linear_spectrogram.html  chirp_linear_spectrum.html  chirp_log_spectrogram.html  chirp_log_spectrum.html  conv_fft_ola_response.html  conv_fft_ola_spectrum.html  conv_time_response.html  conv_time_spectrum.html  dtmf_spectrogram.html  effect_comb_after_spectrogram.html  effect_comb_before_spectrogram.html  effect_delay_after_spectrogram.html  effect_delay_before_spectrogram.html  effect_tremolo_after_spectrogram.html  effect_tremolo_before_spectrogram.html  fir_general_response.html  fir_general_spectrum.html  hamming_window_spectrum.html  hamming_window_time.html  hann_window_spectrum.html  hann_window_time.html  impulse_spectrogram.html  impulse_spectrum.html  mel_energies_frame.html  mel_filterbank_shapes.html  mel_input_spectrogram.html  mel_input_waveform.html  mfcc_frame.html  moving_average_response.html  moving_average_spectrum.html  pitch_acf_peak_frame.html  pitch_f0_tracks.html  pitch_fft_peak_frame.html  rect_window_spectrum.html  rect_window_time.html  sawtooth_spectrogram.html  sawtooth_spectrum.html  shepard_falling_spectrogram.html  (+9 more)
docs/api/: analysis.rst  biquad.rst  constants.rst  dtmf.rst  effects.rst  fir.rst  gcc.rst  generators.rst  index.rst  measurement.rst  scaling.rst  spectrogram_text.rst  spectrum.rst  steganography.rst  windows.rst
docs/guides/: audio-steganography.rst  basic-signal-operations.rst  dtmf.rst  fir-convolution.rst  index.rst  magnitude-spectrum.rst  mel-mfcc.rst  phase-spectrum.rst  pitch-detection.rst  power-spectral-density.rst  shepard-tone.rst  signal-generators.rst  simple-effects.rst  spectrogram-text.rst  stft-spectrogram.rst  window-functions.rst
openspec/changes/add-complete-unit-tests/: design.md  proposal.md  tasks.md
openspec/changes/add-complete-unit-tests/specs/comprehensive-unit-tests/: spec.md
openspec/changes/archive/2026-03-07-update-minidsp-c17-build/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-update-minidsp-c17-build/specs/c17-build-compat/: spec.md
openspec/changes/archive/2026-03-08-fix-pypi-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-fix-pypi-readme/specs/pypi-friendly-readme/: spec.md
openspec/changes/pypi-publish-ready/: design.md  proposal.md  tasks.md
openspec/changes/pypi-publish-ready/specs/release-docs/: spec.md
openspec/changes/pypi-publish-ready/specs/runtime-version/: spec.md
openspec/changes/pypi-publish-ready/specs/sdist-c-source/: spec.md
openspec/changes/pypi-publish-ready/specs/testpypi-workflow/: spec.md
pyminidsp/: __init__.py  _analysis.py  _build_minidsp.py  _core.py  _dtmf.py  _effects.py  _filters.py  _gcc.py  _generators.py  _helpers.py  _spectral.py  _steganography.py
tests/: conftest.py  test_analysis.py  test_dtmf.py  test_effects.py  test_filters.py  test_gcc.py  test_generators.py  test_helpers.py  test_pyminidsp.py  test_spectral.py  test_steganography.py
