[build-system]
requires = ["setuptools>=64", "cffi>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyminidsp"
version = "0.1.0"
description = "Python bindings to the miniDSP C library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chuck Wooters"},
]
keywords = ["dsp", "audio", "signal-processing", "fft", "biquad", "cffi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "cffi>=1.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/wooters/pyminidsp"
Repository = "https://github.com/wooters/pyminidsp"
Issues = "https://github.com/wooters/pyminidsp/issues"

[tool.setuptools.packages.find]
include = ["pyminidsp*"]
